--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     ext {
-        minSdkVersion = 16
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        minSdkVersion = 23
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        buildToolsVersion "30.0.2"
     }
     repositories {
         google()
