--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     ext {
+        buildToolsVersion = "30.0.2"
         minSdkVersion = 23
         compileSdkVersion = 30
         targetSdkVersion = 30
-        buildToolsVersion "30.0.2"
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
