update android build

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,7 @@ android {
     defaultConfig {
         minSdkVersion safeExtGet('DeviceCrypto_minSdkVersion', 23)
         targetSdkVersion safeExtGet('DeviceCrypto_targetSdkVersion', 30)
+        buildToolsVersion safeExtGet('DeviceCrypto_buildToolsVersion', '30.0.2')
         versionCode 1
         versionName "1.0"
 
@@ -57,7 +58,6 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.biometric:biometric:1.1.0'
 }
