--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
