--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'DeviceCryptoExample' do
   config = use_native_modules!
@@ -9,13 +9,36 @@ target 'DeviceCryptoExample' do
   use_react_native!(:path => config["reactNativePath"])
 
   pod 'react-native-device-crypto', :path => '../..'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.80.0' })
+  use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
     flipper_post_install(installer)
+
+    # We set the pod target according to our project target
+    # This is removing a lot of warnings
+    # See https://stackoverflow.com/a/58367269
+    installer.pods_project.targets.each do |target|
+      case target.name
+      when "lottie-ios", "Flipper", "Flipper-Folly", "Flipper-RSocket"
+        # Do nothing for lottie-ios as it is breaking the build
+        # Do nothing for Flipper, Flipper-Folly, Flipper-RSocket as it is breaking the build
+      when "TrustKit"
+        # TrustKit version 4.1.7 can't be upgraded to more than 9
+        target.build_configurations.each do |config|
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+        end
+      else
+        # Default behavior, should be the same version as the app config
+        target.build_configurations.each do |config|
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+        end
+      end
+    end
+
   end
 end
