--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "example"
+  ],
 }
