correct type folder and minor fix on readme

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cryptographic operations inside the secure hardware for React Native",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "types": "lib/typescript/src/index.d.ts",
+  "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
   "source": "src/index.ts",
   "files": [
